Modify(#120): File 처리를 inputStream으로 해서 배포 환경 jar도 호환 가능하도록 설정